[gd_scene load_steps=4 format=3 uid="uid://cp5ikj73eqa16"]

[ext_resource type="Script" path="res://script/gui/main_menu.gd" id="1_5b8fi"]
[ext_resource type="Theme" uid="uid://cty84766drvpt" path="res://asset/canvas.tres" id="1_ras1o"]
[ext_resource type="PackedScene" uid="uid://cuembwsmwhhb0" path="res://scene/regulator.tscn" id="3_0tuyl"]

[node name="MainMenu" type="Control" node_paths=PackedStringArray("music")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5b8fi")
music = NodePath("PanelContainer/MarginContainer/Config/Option/Music")

[node name="PanelContainer" type="PanelContainer" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
offset_right = 1920.0
offset_bottom = 1080.0
theme = ExtResource("1_ras1o")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 600
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 600

[node name="Main" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="Start" type="Button" parent="PanelContainer/MarginContainer/Main"]
layout_mode = 2
text = "Start"

[node name="Config" type="Button" parent="PanelContainer/MarginContainer/Main"]
layout_mode = 2
text = "Config"

[node name="Quit" type="Button" parent="PanelContainer/MarginContainer/Main"]
layout_mode = 2
text = "Quit"

[node name="Config" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="Option" type="VBoxContainer" parent="PanelContainer/MarginContainer/Config"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Music" parent="PanelContainer/MarginContainer/Config/Option" instance=ExtResource("3_0tuyl")]
layout_mode = 2

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/Config/Option"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Back" type="Button" parent="PanelContainer/MarginContainer/Config/Option"]
layout_mode = 2
text = "Back"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Main/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Main/Config" to="." method="_on_config_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Main/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Config/Option/Back" to="." method="_on_back_pressed"]
